--- a/css/styles.scss
+++ b/css/styles.scss
@@ -20,7 +20,8 @@ h1 {
 figure {
     background: salmon;
     padding: 1em;
-    width: 300px;}
+    width: 300px;
+    border-radius: 10px;}
 
 figure img {
     box-sizing: 2px 2px 2px grey;}
