--- a/css/styles.scss
+++ b/css/styles.scss
@@ -56,3 +56,26 @@ figure img {
   -webkit-transition: opacity 0.15s ease 0s;
   -o-transition: opacity 0.15s ease 0s;
   transition: opacity 0.15s ease 0s; }
+
+footer {
+    margin: auto;
+      width: 960px;
+
+}
+
+/* -------- MEDIA QUERIES -------- */
+@media (max-width:500px) {
+  body {
+    width: 90%;} 
+  p{
+    font-size: 1em;}
+  h1 {
+    font-size: 2.5em;
+    text-align: center;}
+ #picon {
+    width: 90%;}
+ .thumb {
+    width: 40%;}
+ .social {
+    width: 25%;}
+}
