styling updates, goodnight

--- a/css/styles.css
+++ b/css/styles.css
@@ -2609,7 +2609,8 @@ h1 {
 /* line 20, /Users/mley/Documents/p3-stand-alone-portfolio/css/styles.scss */
 #picon {
   width: 20%;
-  float: left; }
+  float: left;
+  padding: 0 30px;}
 
 /* line 23, /Users/mley/Documents/p3-stand-alone-portfolio/css/styles.scss */
 .thumb {
@@ -2652,10 +2653,12 @@ footer {
   p{
     font-size: 1em;}
   h1 {
-    font-size: 2.5em;
+    font-size: 2.3em;
     text-align: center;}
   #picon {
-    width: 90%;}
+    width: 80%;
+    display: block;
+    margin: 0 auto;}
   .thumb {
     width: 40%;}
   .social {
