--- a/css/styles.css
+++ b/css/styles.css
@@ -2509,17 +2509,24 @@ h1 {
   width: 30%;
   padding: 0 10px; }
 
-/* line 31, /Users/mley/Documents/p3-stand-alone-portfolio/css/styles.scss */
+/* line 29, /Users/mley/Documents/p3-stand-alone-portfolio/css/styles.scss */
+.thumb:hover {
+  opacity: .7; }
+
+/* line 34, /Users/mley/Documents/p3-stand-alone-portfolio/css/styles.scss */
 .social {
   width: 10%; }
 
-/* line 35, /Users/mley/Documents/p3-stand-alone-portfolio/css/styles.scss */
+/* line 36, /Users/mley/Documents/p3-stand-alone-portfolio/css/styles.scss */
+.social:hover {
+  opacity: .7; }
+
+/* line 41, /Users/mley/Documents/p3-stand-alone-portfolio/css/styles.scss */
 figure {
   background: white;
-  width: 100%;
-  border-radius: 5px; }
+  width: 100%; }
 
-/* line 40, /Users/mley/Documents/p3-stand-alone-portfolio/css/styles.scss */
+/* line 45, /Users/mley/Documents/p3-stand-alone-portfolio/css/styles.scss */
 figure img {
   box-sizing: 2px 2px 2px grey;
   border-radius: 5px;
@@ -2531,7 +2538,7 @@ figure img {
   flex-wrap: wrap;
   justify-content: center;
 } */
-/* line 52, /Users/mley/Documents/p3-stand-alone-portfolio/css/styles.scss */
+/* line 57, /Users/mley/Documents/p3-stand-alone-portfolio/css/styles.scss */
 .lg-backdrop {
   position: fixed;
   top: 0;
@@ -2545,32 +2552,34 @@ figure img {
   -o-transition: opacity 0.15s ease 0s;
   transition: opacity 0.15s ease 0s; }
 
-/* line 65, /Users/mley/Documents/p3-stand-alone-portfolio/css/styles.scss */
+/* line 70, /Users/mley/Documents/p3-stand-alone-portfolio/css/styles.scss */
 footer {
   margin: auto;
   width: 960px; }
 
 /* -------- MEDIA QUERIES -------- */
 @media (max-width: 600px) {
-  /* line 73, /Users/mley/Documents/p3-stand-alone-portfolio/css/styles.scss */
+  /* line 78, /Users/mley/Documents/p3-stand-alone-portfolio/css/styles.scss */
   body {
     width: 90%; }
-  /* line 75, /Users/mley/Documents/p3-stand-alone-portfolio/css/styles.scss */
+  /* line 80, /Users/mley/Documents/p3-stand-alone-portfolio/css/styles.scss */
   p {
     font-size: 1em; }
-  /* line 77, /Users/mley/Documents/p3-stand-alone-portfolio/css/styles.scss */
+  /* line 82, /Users/mley/Documents/p3-stand-alone-portfolio/css/styles.scss */
   h1 {
-    font-size: 10vw;
-    text-align: center; }
-  /* line 80, /Users/mley/Documents/p3-stand-alone-portfolio/css/styles.scss */
+    font-size: 12vw;
+    text-align: center;
+    padding: 0;
+    margin: 0; }
+  /* line 87, /Users/mley/Documents/p3-stand-alone-portfolio/css/styles.scss */
   #picon {
     width: 80%;
     display: block;
     margin: 0 auto; }
-  /* line 84, /Users/mley/Documents/p3-stand-alone-portfolio/css/styles.scss */
+  /* line 91, /Users/mley/Documents/p3-stand-alone-portfolio/css/styles.scss */
   .thumb {
     width: 40%; }
-  /* line 86, /Users/mley/Documents/p3-stand-alone-portfolio/css/styles.scss */
+  /* line 93, /Users/mley/Documents/p3-stand-alone-portfolio/css/styles.scss */
   .social {
     width: 80px; } }
 
